2008-07-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi-el: Version 1.4.2 released.
	* configure.ac: Bump up version.

2008-07-07  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-succeed-regexp): Follow the change of mixi.
	(mixi-new-diary-list-title-regexp): New constant.
	(mixi-get-new-diaries): Follow the change above.

2008-06-07  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-search-diary-list-regexp): Follow the change of mixi.
	(mixi-search-diaries): Follow the change above.

2008-04-15  OHASHI Akira  <bg66@koka-in.org>

	* mixi-el: Version 1.4.1 released.
	* configure.ac: Bump up version.

2008-04-12  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-login-form): Follow the change of mixi.

2008-03-31  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-news-content-regexp): Follow the change of mixi.

2008-02-15  OHASHI Akira  <bg66@koka-in.org>

	* mixi-el: Version 1.4.0 released.
	* configure.ac: Bump up version.

2008-02-12  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-make-release): New function.
	(mixi-release-p): New macro.
	(mixi-release-title): New function.
	(mixi-release-time): Ditto.
	(mixi-release-content): Ditto.
	(mixi-release-list-page): New macro.
	(mixi-release-list-regexp): New constant.
	(mixi-get-releases): New function.
	* mixi-utils.el (mixi-make-author): Support release object.
	(mixi-make-id-1): Ditto.
	(mixi-make-url): Ditto.
	(mixi-make-reply-to): Ditto.
	* sb-mixi.el (shimbun-mixi): Add release-cache.
	(shimbun-mixi-default-group-alist): Add releases group.
	(initialize-instance): Initialize release cache.
	(shimbun-close): Clear release cache.
	(shimbun-mixi-release-article): New function.
	(shimbun-article): Use it.

2008-02-12  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-news-finished-regexp): Follow the change of mixi.
	(mixi-news-title-regexp): Ditto.
	(mixi-news-media-time-regexp): Ditto.
	(mixi-news-content-regexp): Ditto.
	(mixi-news-list-regexp): Ditto.
	(mixi-get-news): Follow the change above.
